[gd_scene load_steps=8 format=2]

[ext_resource path="res://BattleFields/BaseBattleField.tscn" type="PackedScene" id=1]
[ext_resource path="res://BattleFields/EnemyBattleFields/FalldownBattleField.gd" type="Script" id=2]
[ext_resource path="res://BattleFields/EnemyBattleFields/Utils/FalldownCeiling.tscn" type="PackedScene" id=3]
[ext_resource path="res://Music/SFX/blow_2.wav" type="AudioStream" id=4]
[ext_resource path="res://Music/SFX/crack_1.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.98877, 2.25034 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.14906, 29.2385 )

[node name="FalldownBattleField" instance=ExtResource( 1 )]
script = ExtResource( 2 )
floor_data = {
"can_kill": true,
"force": 10,
"time": 1
}

[node name="Player" type="RigidBody2D" parent="Field" index="0"]
position = Vector2( 36, 8 )
collision_mask = 7168
mass = 0.0816327
contacts_reported = 2
contact_monitor = true

[node name="Sprite" type="ColorRect" parent="Field/Player" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.5
margin_top = -1.5
margin_right = 2.5
margin_bottom = 2.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/Player" index="1"]
shape = SubResource( 1 )

[node name="BFCeiling" parent="Field" index="1" instance=ExtResource( 3 )]
position = Vector2( 36, 1 )
collision_layer = 1024

[node name="BFFloor" parent="Field" index="2" instance=ExtResource( 3 )]
position = Vector2( 36, 59 )
rotation = 3.14159
collision_layer = 1024
direction = Vector2( 0, -1 )

[node name="BFLeft" type="StaticBody2D" parent="Field" index="3"]
position = Vector2( 0, 30 )
collision_layer = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/BFLeft" index="0"]
shape = SubResource( 2 )

[node name="BFRight" type="StaticBody2D" parent="Field" index="4"]
position = Vector2( 72, 30 )
collision_layer = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/BFRight" index="0"]
shape = SubResource( 2 )

[node name="CloseInTimer" type="Timer" parent="Field" index="5"]
wait_time = 3.0

[node name="BulletTimer" type="Timer" parent="Field" index="6"]

[node name="DoneTimer" type="Timer" parent="Field" index="7"]

[node name="TouchLimitSFX" type="AudioStreamPlayer2D" parent="Field" index="8"]
stream = ExtResource( 4 )

[node name="playerAnimation" type="AnimationPlayer" parent="Field" index="9"]

[node name="SFXCrack" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 5 )
